# Cursach0

./: CMakeLists.txt  Position.cpp  Position.h  Subject.cpp  Subject.h  Workload.cpp  Workload.h  center.cpp  center.h  hasOnlyDigits.cpp  hasOnlyDigits.h  main.cpp
